--- a/contact.html
+++ b/contact.html
@@ -47,28 +47,29 @@
     </div>
 </nav>
 
-<body onload="myscript()">
+
+
+<body>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
             </div>
             <div class="col-md-auto">
-                <div>
-                    <img class="img1" id="photo" src="imgs/AlineArt.jpg" alt="">
+                <h1>Contact</h1>
+                <h2>You can find me by:</h2>
+                <h4> <b> Email:</b> abm.aline@gmail.com <br>
+                    <b>Phone:</b> +55 (27) 99954.7150 |
+                    99624.2664 <br>
+                    <b> Address:</b> Praia da Costa, Vila Velha,
+                    ES, Brazil. <br>
+                    <b> Skype:</b> alineborgesmoraes <br>
+                    <b> LinkedIn:</b> Aline Moraes</h4>
+                <h1>Or, here:</h1>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2792.6148212369244!2d-73.5466374840362!3d45.578183879102475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91c3a58885ed5%3A0xc04a065601256bc4!2zMzI4MCBBdmVudWUgZGUgbGEgUMOpcGluacOocmUsIE1vbnRyw6lhbCwgUUMgSDFOIDFHMiwgQ2FuYWTDoQ!5e0!3m2!1spt-BR!2sbr!4v1562735056581!5m2!1spt-BR!2sbr"
+                    width="350" height="340" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="col-md-auto">
                 </div>
-                <div>
-                    <h1 class="animated fadeIn"> <b>Hi!</b></h1>
-                    <h3 class="animated fadeIn delay-1s">My name is <b>Aline Moraes</b>, <br>
-                        im the <b>working spirit</b> your company searched for.</h3>
-                    <div class="yell"></div>
-                    <div class="yello"></div>
-                </div>
-            </div>
-            <div class="col-md-auto">
             </div>
         </div>
-    </div>
-
 </body>
-
-</html>
