--- a/Curriculum.html
+++ b/Curriculum.html
@@ -47,22 +47,14 @@
     </div>
 </nav>
 
-<body onload="myscript()">
+
+<body>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
             </div>
             <div class="col-md-auto">
-                <div>
-                    <img class="img1" id="photo" src="imgs/AlineArt.jpg" alt="">
-                </div>
-                <div>
-                    <h1 class="animated fadeIn"> <b>Hi!</b></h1>
-                    <h3 class="animated fadeIn delay-1s">My name is <b>Aline Moraes</b>, <br>
-                        im the <b>working spirit</b> your company searched for.</h3>
-                    <div class="yell"></div>
-                    <div class="yello"></div>
-                </div>
+                <img src="curriculum.jpg" alt="" class="curri">
             </div>
             <div class="col-md-auto">
             </div>
