--- a/qualifications.html
+++ b/qualifications.html
@@ -47,28 +47,56 @@
     </div>
 </nav>
 
-<body onload="myscript()">
+
+<body>
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
             </div>
             <div class="col-md-auto">
-                <div>
-                    <img class="img1" id="photo" src="imgs/AlineArt.jpg" alt="">
-                </div>
-                <div>
-                    <h1 class="animated fadeIn"> <b>Hi!</b></h1>
-                    <h3 class="animated fadeIn delay-1s">My name is <b>Aline Moraes</b>, <br>
-                        im the <b>working spirit</b> your company searched for.</h3>
-                    <div class="yell"></div>
-                    <div class="yello"></div>
-                </div>
+                <h1 class="animated fadeIn delay-1s">Qualifications</h1>
+                <h4>
+                    <ul>
+                        <li> OAB/ES - Attorney n ° 20.727</li> <br>
+                        <li> Coach Training: Professional
+                            Development. Goals achieved: Balance
+                            in labor relations. Peace and harmony in
+                            conflicts. Ability to solve problems. Work at
+                            high levels of stress. Maximizing working
+                            time. Reduction in postponing tasks. Self
+
+                            learning and greater ease in profession-
+                            al structuring in the current company.
+
+                            (02/2017 - 06/2017).</li> <br>
+                        <li> Experience Abroad - 3 months in the USA
+                            - strengthening English language learning.
+                            (2013-2014)</li> <br>
+                        <li> Participation in the congress of the
+                            National Tax System organized by the OAB
+                            (legal security and fiscal war). (2012).</li> <br>
+
+                        <li> Participation in the II International Col-
+                            loquium of Law, organized by UVV (2010). </li> <br>
+
+                        <li> Participation in the Congress of
+                            International Civil Procedure in the
+                            Post-Graduate Program in Law - Master in
+                            Civil Procedural Law of UFES. (2009).</li> <br>
+                        <li> Study Group - Consumer Law
+                            (period 2008/2 - 2009/01).</li> <br>
+                        <li> Voluntary Service: In projects of
+                            participation and animal aid (Current).</li> <br>
+                        <li> Nanny Experience (2008-2010)</li> <br>
+                        <li> Availability for allocation to another
+                            country.</li> <br>
+                        <li> Driving license.</li> <br>
+                        <li> Portuguese native speaker.</li> <br>
+                    </ul>
+                </h4>
             </div>
             <div class="col-md-auto">
             </div>
         </div>
     </div>
-
 </body>
-
-</html>
