--- a/Curriculum.html
+++ b/Curriculum.html
@@ -54,7 +54,9 @@
             <div class="col-md-auto">
             </div>
             <div class="col-md-auto">
-                <img src="curriculum.jpg" alt="" class="curri">
+                <a href="CV_Aline Borges Moraes.pdf" download>
+                    <img src="curriculum.jpg" alt="" class="curri">
+                </a>
             </div>
             <div class="col-md-auto">
             </div>
